--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -63,13 +63,17 @@
         <EditText
             android:id="@+id/txt_pImg"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="100dp"
             android:layout_margin="20dp"
+            android:inputType="textMultiLine"
+            android:minLines="6"
+            android:lineSpacingMultiplier="1"
             android:hint="Enter Product Image Links"
             android:background="@drawable/edit_text"
             android:textColor="@color/txtcolor"
             android:paddingLeft="10dp"
             android:lineHeight="10dp"
+            android:lines="4"
             app:layout_constraintTop_toBottomOf="@id/txt_pQuality"
             app:layout_constraintLeft_toLeftOf="parent"
             />
