--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -66,14 +66,16 @@
             android:layout_height="100dp"
             android:layout_margin="20dp"
             android:inputType="textMultiLine"
-            android:minLines="6"
-            android:lineSpacingMultiplier="1"
+            android:lineSpacingExtra="20sp"
             android:hint="Enter Product Image Links"
             android:background="@drawable/edit_text"
             android:textColor="@color/txtcolor"
             android:paddingLeft="10dp"
             android:lineHeight="10dp"
-            android:lines="4"
+            android:lines="8"
+            android:gravity="top|left"
+            android:paddingTop="10dp"
+            android:scrollbars="vertical"
             app:layout_constraintTop_toBottomOf="@id/txt_pQuality"
             app:layout_constraintLeft_toLeftOf="parent"
             />
